@@ -2301,6 +2301,15 @@ operator|new
 name|AResult
 argument_list|()
 decl_stmt|;
+name|byte
+index|[]
+name|row
+init|=
+name|result
+operator|.
+name|getRow
+argument_list|()
+decl_stmt|;
 name|aresult
 operator|.
 name|row
@@ -2309,10 +2318,17 @@ name|ByteBuffer
 operator|.
 name|wrap
 argument_list|(
-name|result
-operator|.
-name|getRow
-argument_list|()
+name|row
+operator|!=
+literal|null
+condition|?
+name|row
+else|:
+operator|new
+name|byte
+index|[
+literal|1
+index|]
 argument_list|)
 expr_stmt|;
 name|Schema
