@@ -1,0 +1,147 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**   * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|avro
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|avro
+operator|.
+name|generated
+operator|.
+name|AResult
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|Result
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|TestAvroUtil
+block|{
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testGetEmpty
+parameter_list|()
+block|{
+name|Result
+name|result
+init|=
+name|Mockito
+operator|.
+name|mock
+argument_list|(
+name|Result
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Mockito
+operator|.
+name|when
+argument_list|(
+name|result
+operator|.
+name|getRow
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+comment|//Get on a row, that does not exist, returns a result,
+comment|//whose row is null.
+name|AResult
+name|aresult
+init|=
+name|AvroUtil
+operator|.
+name|resultToAResult
+argument_list|(
+name|result
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertNotNull
+argument_list|(
+name|aresult
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
