@@ -335,6 +335,8 @@ Release 0.92.0 - Unreleased
    HBASE-4531  hbase-4454 failsafe broke mvn site; back it out or fix
                (Akash Ashok)
    HBASE-4334  HRegion.get never validates row (Lars Hofhansl)
+   HBASE-4494  AvroServer:: get fails with NPE on a non-existent row
+               (Kay Kay)
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
